[gd_scene load_steps=26 format=2]

[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Tiro/tiro1.wav" type="AudioStream" id=1]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Tiro/tiro4.wav" type="AudioStream" id=2]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Tiro/tiro3.wav" type="AudioStream" id=3]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Tiro/tiro2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sistema som/Sistema_som.gd" type="Script" id=5]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Morte inimigo/kill1.wav" type="AudioStream" id=6]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Morte inimigo/kill2.wav" type="AudioStream" id=7]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Player perdeu/player_loss2.wav" type="AudioStream" id=8]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Player perdeu/player_loss1.wav" type="AudioStream" id=9]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Portal/portal1.wav" type="AudioStream" id=10]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Portal/portal2.wav" type="AudioStream" id=11]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Portal/portal3.wav" type="AudioStream" id=12]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Dialogo/dialogo_normal.wav" type="AudioStream" id=13]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Dialogo/dialogo_raiva.wav" type="AudioStream" id=14]
[ext_resource path="res://Sistema som/Sons/Musicas/menu.wav" type="AudioStream" id=15]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Tiro/tiro_parede.wav" type="AudioStream" id=16]
[ext_resource path="res://Sistema som/Sons/Musicas/Fases/Fase_pt1.wav" type="AudioStream" id=17]
[ext_resource path="res://Sistema som/Sons/Musicas/Fases/Fase_pt2.wav" type="AudioStream" id=18]
[ext_resource path="res://Sistema som/Sons/Musicas/Fases/Fase_pt3.wav" type="AudioStream" id=19]
[ext_resource path="res://Sistema som/Sons/Musicas/Cutscenes/cutscene.wav" type="AudioStream" id=20]
[ext_resource path="res://Sistema som/Sons/Musicas/Cutscenes/cutscene_bravo.wav" type="AudioStream" id=21]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/alarme.wav" type="AudioStream" id=22]
[ext_resource path="res://Sistema som/Sons/Musicas/Fases/Fase_pt4.wav" type="AudioStream" id=23]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Botoes/botao_hover.wav" type="AudioStream" id=24]
[ext_resource path="res://Sistema som/Sons/Efeitos sonoros/Botoes/botao_click.wav" type="AudioStream" id=25]

[node name="Sistema_som" type="Node"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Tiro" type="Node" parent="."]

[node name="Tiro1" type="AudioStreamPlayer" parent="Tiro"]
stream = ExtResource( 1 )
bus = "Efeitos sonoros"

[node name="Tiro2" type="AudioStreamPlayer" parent="Tiro"]
stream = ExtResource( 4 )
bus = "Efeitos sonoros"

[node name="Tiro3" type="AudioStreamPlayer" parent="Tiro"]
stream = ExtResource( 3 )
bus = "Efeitos sonoros"

[node name="Tiro4" type="AudioStreamPlayer" parent="Tiro"]
stream = ExtResource( 2 )
bus = "Efeitos sonoros"

[node name="Alarme" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Alarme"]
stream = ExtResource( 22 )
bus = "Efeitos sonoros"

[node name="Morte_inimigo" type="Node" parent="."]

[node name="Morte_inimigo1" type="AudioStreamPlayer" parent="Morte_inimigo"]
stream = ExtResource( 6 )
bus = "Efeitos sonoros"

[node name="Morte_inimigo2" type="AudioStreamPlayer" parent="Morte_inimigo"]
stream = ExtResource( 7 )
bus = "Efeitos sonoros"

[node name="Player_perdeu" type="Node" parent="."]

[node name="Player_perdeu1" type="AudioStreamPlayer" parent="Player_perdeu"]
stream = ExtResource( 9 )
bus = "Efeitos sonoros"

[node name="Player_perdeu2" type="AudioStreamPlayer" parent="Player_perdeu"]
stream = ExtResource( 8 )
bus = "Efeitos sonoros"

[node name="Portal" type="Node" parent="."]

[node name="Portal1" type="AudioStreamPlayer" parent="Portal"]
stream = ExtResource( 10 )
bus = "Efeitos sonoros"

[node name="Portal2" type="AudioStreamPlayer" parent="Portal"]
stream = ExtResource( 11 )
bus = "Efeitos sonoros"

[node name="Portal3" type="AudioStreamPlayer" parent="Portal"]
stream = ExtResource( 12 )
bus = "Efeitos sonoros"

[node name="Dialogo_normal" type="Node" parent="."]

[node name="Dialogo_normal" type="AudioStreamPlayer" parent="Dialogo_normal"]
stream = ExtResource( 13 )
volume_db = -20.0
bus = "Efeitos sonoros"

[node name="Dialogo_raiva" type="Node" parent="."]

[node name="Dialogo_raiva" type="AudioStreamPlayer" parent="Dialogo_raiva"]
stream = ExtResource( 14 )
pitch_scale = 1.1
bus = "Efeitos sonoros"

[node name="Tiro_parede" type="Node" parent="."]

[node name="Tiro_parede" type="AudioStreamPlayer" parent="Tiro_parede"]
stream = ExtResource( 16 )
bus = "Efeitos sonoros"

[node name="Btn_hover" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Btn_hover"]
stream = ExtResource( 24 )
bus = "Efeitos sonoros"

[node name="Btn_click" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Btn_click"]
stream = ExtResource( 25 )
bus = "Efeitos sonoros"

[node name="Musica_menu" type="Node" parent="."]

[node name="Musica_menu" type="AudioStreamPlayer" parent="Musica_menu"]
stream = ExtResource( 15 )
bus = "Musica"

[node name="Musica_fases_1-5" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Musica_fases_1-5"]
stream = ExtResource( 17 )
bus = "Musica"

[node name="Musica_fases_6-10" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Musica_fases_6-10"]
stream = ExtResource( 18 )
bus = "Musica"

[node name="Musica_fases_11-15" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Musica_fases_11-15"]
stream = ExtResource( 19 )
bus = "Musica"

[node name="Musica_fases_16-20" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Musica_fases_16-20"]
stream = ExtResource( 23 )
bus = "Musica"

[node name="Musica_cutscene_normal" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Musica_cutscene_normal"]
stream = ExtResource( 20 )
bus = "Musica"

[node name="Musica_cutscene_raiva" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Musica_cutscene_raiva"]
stream = ExtResource( 21 )
bus = "Musica"
